--- a/internal/hyperctl/systemd/openhack-hypervisor.service
+++ b/internal/hyperctl/systemd/openhack-hypervisor.service
@@ -5,6 +5,8 @@ Requires=redis.service
 
 [Service]
 Type=simple
+User=openhack
+Group=openhack
 ExecStart={{.BinaryPath}} \
     --deployment {{.Deployment}} \
     --port {{.Port}} \
@@ -16,7 +18,7 @@ RestartSec=1s
 StartLimitBurst=10
 StandardOutput=journal
 StandardError=journal
-Environment="PATH=/usr/local/go/bin:/usr/local/bin:/usr/bin:/bin"
+Environment="PATH=$PATH:/usr/local/go/bin:/usr/local/bin:/usr/bin:/bin"
 Environment=GODEBUG=madvdontneed=1
 
 [Install]
