changed nginx.conf, maybe that will work for websockets

--- a/internal/hyperctl/nginx/nginx.conf
+++ b/internal/hyperctl/nginx/nginx.conf
@@ -49,9 +49,9 @@ server {
         proxy_pass http://green;
     }
 
-    # --- WebSocket endpoint(s) (example path). Use same fallback behavior.
-    # Duplicate/adjust for your actual WS routes.
-    location /ws/ {
+    # --- WebSocket endpoints for streaming
+    # --- WebSocket endpoints: Use same fallback behavior
+    location /hypervisor/ws/ {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $upgrade_hdr;
         proxy_pass http://blue;
