added knox to hyperctl commands

--- a/internal/hyperctl/nginx/nginx.conf
+++ b/internal/hyperctl/nginx/nginx.conf
@@ -21,6 +21,8 @@ map $http_upgrade $upgrade_hdr {
 server {
     listen 80 reuseport;
 
+    server_name api.openhack.ro;
+
     # Fail fast so we flip to green quickly if blue is down/draining
     proxy_connect_timeout 500ms;
     proxy_read_timeout    60s;   # long enough for idle WS pings
