changed the nginx configuration to allow websockets for either /ws/, /hypervisor/ws/ or /vVERSION-ENV/ws/

--- a/internal/hyperctl/nginx/nginx.conf
+++ b/internal/hyperctl/nginx/nginx.conf
@@ -53,7 +53,7 @@ server {
 
     # --- WebSocket endpoints for streaming
     # --- WebSocket endpoints: Use same fallback behavior
-    location /hypervisor/ws/ {
+    location ~ ^/(hypervisor/|v[^/]+/)?ws/ {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $upgrade_hdr;
         proxy_pass http://blue;
